<resources>
    <string name="app_name">ParadiseDesign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_entering">Login or Email</string>
    <string name="password_entering">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_text">Welcome to … </string>
    <string name="checkbox_remember_text">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="muhasebeci_button">Accountant</string>
    <string name="bilanco_button">Big business</string>
    <string name="isletme_button">Normal business</string>
    <string name="basit_usul_button">Small business</string>
    <string name="accountant_registration_title_text">Register as an \naccountant here</string>
    <string name="tc_kimlik_enter">TC Identification number</string>
    <string name="name_enter">First name</string>
    <string name="surname_enter">Last name</string>
    <string name="phone_enter">Mobile number</string>
    <string name="secure_data">Secure the entered data</string>
    <string name="password_rules">Passwords must contain both uppercase and lowercase characters.
        Passwords must contain at least one number.</string>
    <string name="accountant_registration_password">Enter password</string>
    <string name="title_activity_accountant_registration">Accountant registration</string>
    <string name="activity_bank_details_name">Company name</string>
    <string name="activity_bank_details_tax">Tax number</string>
    <string name="activity_bank_details_centSys">Central System</string>
    <string name="activity_bank_details_cash">Cash</string>
    <string name="activity_bank_details_cheques_received">Cheques received</string>
    <string name="activity_bank_details_cheques_given">Cheques given and payment order</string>
    <string name="activity_bank_details_liquid_assets">Other liquid assets</string>
    <string name="activity_bank_details_cash_add_title">Enter the cash information</string>
    <string name="activity_bank_details_cash_add_cash">Cash name</string>
    <string name="activity_bank_details_cash_add_cash_number">Cash number</string>
    <string name="activity_bank_details_cash_add_cash_exchange">Cash exchange type</string>
    <string name="activity_bank_details_cash_add_check">Limited</string>
    <string name="activity_bank_details_cash_add_cash_limit">Cash limit</string>
    <string name="activity_bank_details_cash_add_submit">Submit</string>
    <string name="activity_bank_details_cash_find_company_name">Company name</string>
    <string name="activty_company_profile_change_password_title_1">Enter current password</string>
    <string name="activty_company_profile_change_password_title_1_password">Current password</string>
    <string name="activty_company_profile_change_password_title_2">Enter new password</string>
    <string name="activty_company_profile_change_password_title_2_password">New password</string>
    <string name="activty_company_profile_change_password_title_3">Enter new password again</string>
    <string name="activty_company_profile_change_password_title_3_password">Again</string>
    <string name="activty_company_profile_change_password_submit">Submit</string>
    <string name="activity_profile_edit_data_title">Change data</string>
    <string name="activity_profile_edit_data_company_name">Company name</string>
    <string name="activity_profile_edit_data_company_email">Company email</string>
    <string name="activity_profile_edit_data_company_type">Company type</string>
    <string name="activity_profile_edit_data_sehir">Province</string>
    <string name="activity_profile_edit_data_ilce">District</string>
    <string name="activity_profile_edit_data_address">Address</string>
    <string name="activity_profile_edit_data_tax">Tax administration</string>
    <string name="activity_profile_edit_data_submit">Submit</string>
    <string name="activty_company_profile_image_select_button">Upload photo</string>
    <string name="activity_depo_details_company_name">Company name</string>
    <string name="activity_depo_details_tax">Tax number</string>
    <string name="activity_depo_details_centSys">CentSys</string>
    <string name="activity_depo_details_find_button">Find</string>
    <string name="activity_depo_details_update_button">Update</string>
    <string name="activity_depo_details_product_name">Product name</string>
    <string name="activity_depo_details_product_quantity">Quantity</string>
    <string name="activity_enterprise_add_title">Change information</string>
    <string name="activity_enterprise_add_company_name">Company name</string>
    <string name="activity_enterprise_add_company_email">Company email</string>
    <string name="activity_enterprise_add_company_type">Company type</string>
    <string name="activity_enterprise_add_sehir">Province</string>
    <string name="activity_enterprise_add_ilce">District</string>
    <string name="activity_enterprise_add_address">Address</string>
    <string name="activity_enterprise_add_tax_administraition">Tax administration</string>
    <string name="activity_enterprise_add_tax_number">Tax number</string>
    <string name="activity_enterprise_add_centSys">CentSys number</string>
    <string name="activity_enterprise_add_trade_registry_number">Trade registry number</string>
    <string name="activity_enterprise_add_password">Enter password</string>
    <string name="activity_enterprise_add_submit">Submit</string>
    <string name="activity_enterprise_profile_close_account">Close account</string>
    <string name="activity_enterprise_profile_company_name">Company name</string>
    <string name="activity_enterprise_profile_tax">Tax number</string>
    <string name="activity_enterprise_profile_centSys">CentSys number</string>
    <string name="activity_enterprise_profile_company_type">Company type</string>
    <string name="activity_enterprise_profile_sehir">Province</string>
    <string name="activity_enterprise_profile_ilce">District</string>
    <string name="activity_enterprise_profile_tax_administration">Tax administration</string>
    <string name="activity_enterprise_profile_address">Address</string>
    <string name="activity_enterprise_profile_trade_registry_number">Trade registry number</string>
    <string name="activity_enterprise_profile_company_password">Enterprise password</string>
    <string name="activity_enterprise_profile_change_data_button">Change information</string>
    <string name="activity_enterprise_profile_password_change_button">Change password</string>
    <string name="activity_esmm_details_company_name">Company name</string>
    <string name="activity_esmm_details_profile_tax">Tax number</string>
    <string name="activity_esmm_details_profile_centSys">CentSys number</string>
    <string name="activity_esmm_details_find_button">Find</string>
    <string name="activity_esmm_details_add_button">Add</string>
    <string name="activity_fatura_details_eFatura">E-invoice</string>
    <string name="activity_fatura_details_fatura">Invoice</string>
    <string name="activity_fatura_details_eIrsaliye">E-dispatch</string>
    <string name="activity_fatura_details_irsaliye">Dispatch</string>
    <string name="activty_fatura_details_irsaliye_title">Add information</string>
    <string name="activty_fatura_details_irsaliye_product_name">Product name</string>
    <string name="activty_fatura_details_irsaliye_quantity">Quantity</string>
    <string name="activty_fatura_details_irsaliye_product_price">Product price</string>
    <string name="activty_fatura_details_irsaliye_kdv">VAT</string>
    <string name="activty_fatura_details_irsaliye_total_price">Total</string>
    <string name="activty_fatura_details_irsaliye_delivery_address">Delivery address</string>
    <string name="activty_fatura_details_irsaliye_submit">Submit</string>
    <string name="activity_fatura_irsaliye_add_title">List of products</string>
    <string name="activity_fatura_irsaliye_details_company_name">Company name</string>
    <string name="activity_fatura_irsaliye_details_tax">Tax number</string>
    <string name="activity_fatura_irsaliye_details_centSys">CentSys</string>
    <string name="activity_fatura_irsaliye_details_add_button">Add</string>
    <string name="activity_fatura_irsaliye_details_find_button">Find</string>
    <string name="activity_fatura_irsaliye_details_delete_button">Delete</string>
    <string name="activity_fatura_irsaliye_details_update_button">Update</string>
    <string name="activity_fatura_irsaliye_details_product_name">Product name</string>
    <string name="activity_fatura_irsaliye_details_product_quantity">Quantity</string>
    <string name="activity_fatura_irsaliye_details_product_kdv">VAT</string>
    <string name="activity_fatura_irsaliye_details_product_discount">Discount</string>
    <string name="activity_fatura_manual_title">Add information</string>
    <string name="activity_fatura_manual_product_name">Product name</string>
    <string name="activity_fatura_manual_product_quantity">Quantity</string>
    <string name="activity_fatura_manual_product_price">Product price</string>
    <string name="activity_fatura_manual_product_kdv">VAT</string>
    <string name="activity_fatura_manual_total_price">Total</string>
    <string name="activity_fatura_manual_submit">Submit</string>
    <string name="activity_irsaliye_address_title">Enter delivery address</string>
    <string name="activity_irsaliye_address_sehir">Province</string>
    <string name="activity_irsaliye_address_ilce">District</string>
    <string name="activity_irsaliye_address_address">Address</string>
    <string name="activity_irsaliye_address_submit">Submit</string>
    <string name="activity_licence_key_title">Enter licence key</string>
    <string name="activity_licence_key_submit">Submit</string>
    <string name="activity_product_select_type_trade">Commercial product</string>
    <string name="activity_product_select_type_factory">Factory product</string>
    <string name="activity_product_select_type_service">Service product</string>
    <string name="activity_products_detail_company_name">Company name</string>
    <string name="activity_products_detail_tax">Tax number</string>
    <string name="activity_products_detail_centSys">CentSys</string>
    <string name="activity_products_detail_add_button">Add</string>
    <string name="activity_products_detail_find_button">Find</string>
    <string name="activity_products_detail_delete_button">Delete</string>
    <string name="activity_products_detail_update_button">Update</string>
    <string name="activity_products_detail_product_name">Product name</string>
    <string name="activity_products_detail_product_quantity">Quantity</string>
    <string name="activity_products_detail_product_kdv">VAT</string>
    <string name="activity_products_detail_product_discount">Discount</string>
    <string name="activity_products_detail_add_title">Enter product information</string>
    <string name="fatura_normal_second_recycler_id">Id</string>
    <string name="fatura_normal_second_recycler_product_name">Product name</string>
    <string name="fatura_normal_second_recycler_tarih">Date</string>
    <string name="fatura_normal_second_recycler_toplam_fiyat">Total price</string>
    <string name="tab1_text">Menu</string>
    <string name="tab2_text">Companies</string>
    <string name="tab3_text">Accountant fee</string>
    <string name="tab4_text">Warehouse</string>
    <string name="tab5_text">Workers</string>
    <string name="tab6_text">Products and services</string>
    <string name="tab7_text">Invoice operations</string>
    <string name="tab8_text">Mizan</string>
    <string name="tab9_text">Cash/Bank operations</string>
    <string name="tab10_text">Export and Import</string>
    <string name="tab11_text">Stock operations</string>
</resources>