<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tabs.company.ChangePasswordActivity"
    android:layout_margin="20dp"
    android:gravity="center">



    <TextView
        android:id="@+id/company_prifile_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activty_company_profile_change_password_title_1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/company_profile_current_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activty_company_profile_change_password_title_1_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/company_profile_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activty_company_profile_change_password_title_2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/company_profile_new_password_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activty_company_profile_change_password_title_2_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/company_profile_new_password_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activty_company_profile_change_password_title_3_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button android:id="@+id/company_profile_change_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:padding="12dp"
        android:text="@string/activty_company_profile_change_password_submit"
        android:layout_marginTop="8dp"/>

</LinearLayout>