<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSecondary"
    android:padding="8dp">

    <ImageView
        android:id="@+id/fatura_normal_second_recycler_image"
        android:layout_width="32.8dp"
        android:layout_height="40.6dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_fatura_paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/fatura_normal_second_recycler_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fatura_normal_second_recycler_id"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/fatura_normal_second_recycler_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fatura_normal_second_recycler_name_of_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/fatura_normal_second_recycler_product_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/fatura_normal_second_recycler_image"
        app:layout_constraintTop_toBottomOf="@id/fatura_normal_second_recycler_id" />

    <TextView
        android:id="@+id/fatura_normal_second_recycler_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/fatura_normal_second_recycler_tarih"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/fatura_normal_second_recycler_image"
        app:layout_constraintTop_toBottomOf="@id/fatura_normal_second_recycler_name_of_product" />

    <TextView
        android:id="@+id/fatura_normal_second_recycler_total_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/fatura_normal_second_recycler_toplam_fiyat"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/fatura_normal_second_recycler_image"
        app:layout_constraintTop_toBottomOf="@id/fatura_normal_second_recycler_date" />


</androidx.constraintlayout.widget.ConstraintLayout>